# flafl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml
docs/: mkdocs.yml
docs/docs/: index.md
flafl/: __init__.py  context.py  github.py  helpers.py  jira.py  jsonparser.py  strategies.py
tests/: test_context_unit.py  test_flafl.py  test_github_unit.py  test_helpers_unit.py  test_init_unit.py  test_jira_unit.py  test_jsonparser_unit.py  test_pr.py  test_repo.py  test_strategies_unit.py
